# Qt_Project_edit

./: CMakeLists.txt  README.md  annotationwidget.cpp  annotationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
